--- a/assets/scss/pages/_crew.scss
+++ b/assets/scss/pages/_crew.scss
@@ -13,7 +13,7 @@
     height: 358px;
     padding-top: 55px;
     .headercontainer{
-      padding-top: 0;
+      
       h3{
         @include small{
           margin-bottom: 1.4em
