--- a/assets/scss/pages/_work.scss
+++ b/assets/scss/pages/_work.scss
@@ -296,7 +296,11 @@
       @include xs-small{
         background-position: left -2em top;
       }
+      @include small{
+        background-size: auto;
+      }
       @include medium{
+        background-size: 303px;
         background-position-x: 2em;
         background-position-y: -26px;
       }
@@ -313,6 +317,10 @@
       @include xs-small{
         background-position: right -2em top;
       }
+      @include small{
+        background-size: 303px;
+        background-size: auto;
+      }
       @include medium{
         background-position-x: 98%;
         background-position-y: -31px;
@@ -328,7 +336,11 @@
       @include xs-small{
         background-position: left -2em top;
       }
+      @include small{
+        background-size: auto;
+      }
       @include medium{
+        background-size: 303px;
         background-position-x: 2em;
         background-position-y: -26px;
       }
